# macro-kb

./: .gitignore  Cargo.toml  README.md  example_handler.sh
src/: config.rs  main.rs  root-client.rs  user-server.rs
systemd/system/: macro-kb-root.service  macro-kb.service
